--- a/src/product-listing/index.html
+++ b/src/product-listing/index.html
@@ -12,9 +12,13 @@
     <main class="divider">
       <section class="products">
         <h2>Top Products <span class="title"></span></h2>
-        <ul class="product-list"></ul>
+        <ul class="product-list" id="top-products-list"></ul> <!-- This is where Top Products will be shown -->
+        <div id="product-list-container">
+          <h1>Search Results</h1>
+          <div id="products-container"></div>
+        </div>
       </section>
     </main>
-    <footer id="main-footer"></footer>
+    <footer class="divider" id="main-footer"></footer>
   </body>
 </html>
